# Vehicle_Dashboard_using_QT

./: Arrow.qml  Backend.cpp  Backend.h  CMakeLists.txt  CustomGauge.qml  Gauge.qml  NoodleSpeed.qml  appmanager.cpp  appmanager.h  backend.cpp  backend.h  main.cpp  main.qml
